# tvvr

./: CMakeLists.txt  README.md  main.cpp
app/domain/entity/: deploy_mode.hpp  oc_error_type.hpp
app/domain/service/: configuration_service.hpp
app/domain/usecase/: get_deploy_mode_usecase.hpp
app/infra/: configuration_service_impl.cpp  configuration_service_impl.hpp
app/ui/presenter/: banner_presenter.cpp  banner_presenter.hpp  contract.cpp  contract.hpp
ui/presenter/: banner_presenter.cpp  banner_presenter.hpp  contract.hpp
